--- a/app/Shared/NavMenu.razor
+++ b/app/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Mips.App</a>
+    <a class="navbar-brand" href="">mips</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -14,12 +14,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="code">
-                <span class="oi oi-plus" aria-hidden="true"></span> Code
+                <span class="oi oi-code" aria-hidden="true"></span> Code
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="cpu">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Cpu
+                <span class="oi oi-calculator" aria-hidden="true"></span> Cpu
             </NavLink>
         </li>
     </ul>
