--- a/app/wwwroot/css/app.css
+++ b/app/wwwroot/css/app.css
@@ -42,9 +42,14 @@ a, .btn-link {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
+
+#monaco-container {
+    width: 800px;
+    height: 800px;
+}
